<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.example</groupId>
	<artifactId>SimpleWOApp</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>woapplication</packaging>
	<properties>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.webobjects</groupId>
				<artifactId>webobjects-bom</artifactId>
				<version>5.4.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaEOAccess</artifactId>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaEOControl</artifactId>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaFoundation</artifactId>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaJDBCAdaptor</artifactId>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaWebObjects</artifactId>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaXML</artifactId>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>Sources</sourceDirectory>
		<resources>
			<resource>
				<targetPath>Resources</targetPath>
				<filtering>false</filtering>
				<directory>Components</directory>
			</resource>
			<resource>
				<targetPath>Resources</targetPath>
				<filtering>false</filtering>
				<directory>Resources</directory>
			</resource>
			<resource>
				<targetPath>WebServerResources</targetPath>
				<filtering>false</filtering>
				<directory>WebServerResources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>io.github.wocommunity</groupId>
				<artifactId>woinstall-maven-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<?m2e ignore?>
						<goals>
							<goal>woinstall</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.github.wocommunity</groupId>
				<artifactId>wolifecycle-maven-plugin</artifactId>
				<version>2.7</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<compilerArgs>
						<compilerArg>--add-exports</compilerArg>
						<compilerArg>java.base/sun.security.action=ALL-UNNAMED</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
